--- a/qrcode.html
+++ b/qrcode.html
@@ -27,13 +27,13 @@ function getMobileOperatingSystem() {
 function DetectAndServe(){
     let os = getMobileOperatingSystem();
     if (os == "Android") {
-        window.location.href = "http://www.Androidexample.com"; 
+        window.location.href = "https://play.google.com/store/apps/details?id=id.loyal.skafamily&hl=id&gl=US"; 
     } else if (os == "iOS") {
-        window.location.href = "http://www.IOSexample.com";
+        window.location.href = "https://apps.apple.com/id/app/ska-family/id6446349516";
     } else if (os == "Windows Phone") {
-        window.location.href = "http://www.WindowsPhoneexample.com";
+        window.location.href = "https://play.google.com/store/apps/details?id=id.loyal.skafamily&hl=id&gl=US";
     } else {
-        window.location.href = "http://www.NowherLandexample.com";
+        window.location.href = "https://play.google.com/store/apps/details?id=id.loyal.skafamily&hl=id&gl=US";
     }
 }
 </script>
